--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     mkdir <span>crea una carpeta</span>
     touch <span>crea un archivo, colocar la extension del archivo</span>
     git init <span>crea un repositorio nuevo</span>
-    
+    git add . <span>agrega todos los archivos</span>
+    git commit -m "comentario" <span>para subir</span>
+    git remote add origin linkDelRespositorio <span>conectarse al repositorio</span>
+    git push -u origin master <span>subir los archivos</span>
 
 
 </body>
