agregando un push

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     git commit -m "comentario" <span>para subir</span>
     git remote add origin linkDelRespositorio <span>conectarse al repositorio</span>
     git push -u origin master <span>subir los archivos</span>
-
-
+    git status <span>ver el estado de mi repositorio</span>
 </body>
 </html>
